Apply rule ""StandardCharsets" constants should be preferred" Update "actionPerformed(java.awt.event.ActionEvent)" method in "org.springframework.context.support.VoiceManagerOjadAccentPanel" class Use "UTF_8" field in "java.nio.charset.StandardCharsets" class to replace usage of "forName(java.lang.String)" method in "java.nio.charset.Charset" class